Feat/owner user management (#16)
* feat: owner user management

* fix: fix shop id undefined query option

* fix: fix create user

* feat: invalidate queries
